<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="5dp"
    tools:ignore="SpUsage">

    <com.healthy.library.widget.DrawableTextView
        android:id="@+id/tv_function_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/index_ic_pregnancy_1"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/index_function_pregnancy_1"
        android:textColor="#ff444444"
        android:textSize="14dp"
        app:drawable_size="50dp"
        app:layout_constraintEnd_toStartOf="@id/tv_function_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.healthy.library.widget.DrawableTextView
        android:id="@+id/tv_function_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/index_ic_pregnancy_2"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/index_function_pregnancy_2"
        android:textColor="#ff444444"
        android:textSize="14dp"
        app:drawable_size="50dp"
        app:layout_constraintEnd_toStartOf="@id/tv_function_3"
        app:layout_constraintStart_toEndOf="@id/tv_function_1"
        app:layout_constraintTop_toTopOf="@id/tv_function_1"/>

    <com.healthy.library.widget.DrawableTextView
        android:id="@+id/tv_function_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/index_ic_pregnancy_3"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/index_function_pregnancy_3"
        android:textColor="#ff444444"
        android:textSize="14dp"
        app:drawable_size="50dp"
        app:layout_constraintEnd_toStartOf="@id/tv_function_4"
        app:layout_constraintStart_toEndOf="@id/tv_function_2"
        app:layout_constraintTop_toTopOf="@id/tv_function_1"/>

    <com.healthy.library.widget.DrawableTextView
        android:id="@+id/tv_function_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/index_ic_pregnancy_4"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/index_function_pregnancy_4"
        android:textColor="#ff444444"
        android:textSize="14dp"
        app:drawable_size="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_function_3"
        app:layout_constraintTop_toTopOf="@id/tv_function_1"/>
</androidx.constraintlayout.widget.ConstraintLayout>