<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    tools:ignore="SpUsage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="22dp">

        <View
            android:id="@+id/view_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/index_header_one_year_large"
            android:contentDescription="@string/app_name"
            app:layout_constraintDimensionRatio="994:662"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.healthy.library.widget.CornerImageView
            android:id="@+id/iv_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            app:is_circle="true"
            app:layout_constraintStart_toStartOf="@id/view_top"
            app:layout_constraintTop_toTopOf="@id/view_top"
            tools:src="@drawable/img_avatar_default"/>

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="1dp"
            android:fontFamily="@string/font_sans_serif_medium"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_baby_age"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="快乐柠檬草，你好！"/>

        <TextView
            android:id="@+id/tv_baby_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="13dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintStart_toStartOf="@id/tv_nickname"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname"
            tools:text="宝宝4岁5个月"/>

        <ImageView
            android:id="@+id/iv_see_detail"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/index_ic_see_remind_detail"
            app:layout_constraintBottom_toBottomOf="@id/view_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_avatar"/>

        <ImageView
            android:id="@+id/iv_today_remind"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/index_ic_service"
            app:layout_constraintBottom_toBottomOf="@id/iv_see_detail"
            app:layout_constraintTop_toTopOf="@id/iv_see_detail"
            app:layout_constraintStart_toStartOf="@id/iv_avatar"
            android:contentDescription="@string/app_name"/>
        <ViewFlipper
            android:id="@+id/flipper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_today_remind"
            app:layout_constraintEnd_toStartOf="@id/iv_see_detail"
            app:layout_constraintStart_toEndOf="@id/iv_today_remind"
            app:layout_constraintTop_toTopOf="@id/iv_today_remind"/>

        <com.healthy.library.widget.DrawableTextView
            android:id="@+id/tv_function_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/index_ic_parenting_1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/index_function_parenting_1"
            android:textColor="#ff444444"
            android:textSize="14dp"
            app:drawable_size="50dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/tv_function_2"
            app:layout_constraintStart_toStartOf="@id/view_top"
            app:layout_constraintTop_toBottomOf="@id/view_top"/>


        <com.healthy.library.widget.DrawableTextView
            android:id="@+id/tv_function_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/index_ic_parenting_3"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/index_function_parenting_3"
            android:textColor="#ff444444"
            android:textSize="14dp"
            app:drawable_size="50dp"
            app:layout_constraintEnd_toStartOf="@id/tv_function_1"
            app:layout_constraintStart_toEndOf="@id/tv_function_3"
            app:layout_constraintTop_toTopOf="@id/tv_function_1"/>

        <com.healthy.library.widget.DrawableTextView
            android:id="@+id/tv_function_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/index_ic_parenting_4"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/index_function_parenting_4"
            android:textColor="#ff444444"
            android:textSize="14dp"
            app:drawable_size="50dp"
            app:layout_constraintEnd_toEndOf="@id/view_top"
            app:layout_constraintStart_toEndOf="@id/tv_function_2"
            app:layout_constraintTop_toTopOf="@id/tv_function_1"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_remind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="flipper,iv_see_detail,iv_today_remind"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
